chore: close another bunch of security issues (#612)
* chore: pom.xml: update helix-core to 1.3.0

close CVE-2023-38647

Refs: IN-790

* chore: pom.xml: update json to 20231013

close CVE-2023-5072

Refs: IN-790

* chore: pom.xml: update json to 20240303

Refs: IN-790

* chore: pom.xml: update antisamy to 1.7.6 (close CVE-2024-23635

Refs: IN-790

* chore: pom.xml: update xercesImpl to 2.12.2 (close CVE-2022-23437)

Refs: IN-790

* chore: pom.xml: update jdom2 to 2.0.6.1

close CVE-2021-33813

Refs: IN-790

* chore: pom.xml: update commons-fileupload to 1.5

close CVE-2023-24998

Refs: IN-790

* chore: pom.xml: update guava to 33.3.1

close CVE-2023-2976

Refs: IN-790

* chore: general cleanup of dead or deprecate code